--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,5 +11,5 @@
 }
 
 .background-home {
-  @apply bg-back bg-no-repeat bg-center bg-fixed w-full h-screen;
+  @apply bg-back bg-no-repeat bg-center bg-fixed w-full h-screen bg-cover;
 }
