--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,3 +20,11 @@ body {
 .btn_class {
   @apply border-[3px] border-black rounded-[20px] w-full h-[45px] placeholder:text-black px-3 font-light;
 }
+
+.btn_class_response {
+  @apply border-[3px] border-black rounded-[20px] w-[100px] h-[45px] placeholder:text-black px-3 font-light;
+}
+
+.card_hours {
+  @apply border-[3px] border-gray-300 text-gray-400 rounded-[10px] text-center py-3 hover:font-bold hover:text-black hover:border-black cursor-pointer;
+}
